--- a/skript/references.bib
+++ b/skript/references.bib
@@ -11,3 +11,25 @@
 	publisher = {CRC Press},
 	year = {2011},
 }
+
+@book{skript:linalg,
+	author = {Andreas M"uller},
+	title = {Lineare Algebra},
+	type = {Skript zur Vorlesung},
+	year = {2011-2014},
+}
+
+@book{skript:openmp,
+	author = {Barbara Chapman, Gabriele Jost, Ruud van der Pas},
+	title = {Using OpenMP, Portable Shared Memory Parallel Programming},
+	year = {2007},
+	publisher = {MIT Press},
+}
+
+@book{skript:opencl,
+	title = {The OpenCL Specification, Version 1.1},
+	publisher = {The Kronos Group},
+	year = {2011},
+	editor = {Aaftab Munshi},
+	url = {https://www.khronos.org/registry/cl/specs/opencl-1.1.pdf}
+}
