--- a/skript/sprachen.tex
+++ b/skript/sprachen.tex
@@ -537,7 +537,7 @@ eine Parallelisierungsmethode zu w"ahlen, bei der die einzelnen
 Threads nicht so frei sind.
 Parallelisierung muss also mit einer wesentlich feineren Granularit"at
 stattfinden, auf der Ebene einzelner Instruktionen oder Kontrollstrukuren.
-Genau dies leistet OpenMP.
+Genau dies leistet OpenMP \cite{skript:openmp}.
 
 OpenMP ist eine API-Spezifikation f"ur parallele Programmierung.
 Die erste Spezifikation f"ur Fortran erschien 1997, die j"ungste 
@@ -610,7 +610,8 @@ keinen Gewinn mehr.
 
 \section{OpenCL\label{opencl-intro}}
 \rhead{OpenCL}
-Die Open Compute Language erlaubt die plattformunabh"angige Programmierung
+Die Open Compute Language \cite{skript:opencl}
+erlaubt die plattformunabh"angige Programmierung
 f"ur Beschleuniger-Hardware wie zum Beispiel Graphikkarten, wie wir
 in Abschnitt \ref{section-beschleuniger} gesehen haben. 
 Dort wurde auch bereits das Plattform-Modell besprochen.
