--- a/skript/maschinen.tex
+++ b/skript/maschinen.tex
@@ -2,6 +2,11 @@
 High Performance Computing ist m"oglich dank massiver Parallelisierung.
 Dieses Kapitel beschreibt, wie HPC Hardware aussieht, und welche Konsequenzen
 sich f"ur die Programmierung ergeben.
+Die Darstellung ist nicht vollst"andig, und wir werden auch keine
+Theorie dazu entwickeln, wie sich die Rechenleistung eines Systems
+f"ur eine bestimmte Aufgabe absch"atzen l"asst.
+Eine hervorragende Referenz dazu ist das Buch von Hager und Wellein
+\cite{skript:hagerwellein}.
 \begin{figure}
 \begin{center}
 \includegraphics[width=0.5\hsize]{graphics/numa-1.pdf}
