--- a/skript/references.bib
+++ b/skript/references.bib
@@ -1,26 +1,26 @@
 @book{skript:watkins,
-	author = {David S. Watkins},
+	author = {Watkins, David S.},
 	title = {Fundamentals of Matrix Computations},
 	publisher = {Wiley},
 	year = {2010},
 }
 
 @book{skript:hagerwellein,
-	author = {Georg Hager und Gerhard Wellein},
+	author = {Hager, Georg and Wellein, Gerhard},
 	title = {Introduction to High Performance Computing for Scientists and Engineers},
 	publisher = {CRC Press},
 	year = {2011},
 }
 
 @book{skript:linalg,
-	author = {Andreas M"uller},
+	author = {M"uller, Andreas},
 	title = {Lineare Algebra},
 	type = {Skript zur Vorlesung},
 	year = {2011-2014},
 }
 
 @book{skript:openmp,
-	author = {Barbara Chapman, Gabriele Jost, Ruud van der Pas},
+	author = {Chapman, Barbara and Jost, Gabriele and van der Pas, Ruud},
 	title = {Using OpenMP, Portable Shared Memory Parallel Programming},
 	year = {2007},
 	publisher = {MIT Press},
@@ -30,6 +30,6 @@
 	title = {The OpenCL Specification, Version 1.1},
 	publisher = {The Kronos Group},
 	year = {2011},
-	editor = {Aaftab Munshi},
+	editor = {Munshi, Aaftab},
 	url = {https://www.khronos.org/registry/cl/specs/opencl-1.1.pdf}
 }
