--- a/skript/references.bib
+++ b/skript/references.bib
@@ -3,6 +3,7 @@
 	title = {Fundamentals of Matrix Computations},
 	publisher = {Wiley},
 	year = {2010},
+	language = {english},
 }
 
 @book{skript:hagerwellein,
@@ -10,6 +11,7 @@
 	title = {Introduction to High Performance Computing for Scientists and Engineers},
 	publisher = {CRC Press},
 	year = {2011},
+	language = {english},
 }
 
 @book{skript:linalg,
@@ -17,6 +19,7 @@
 	title = {Lineare Algebra},
 	type = {Skript zur Vorlesung},
 	year = {2011-2014},
+	language = {german},
 }
 
 @book{skript:openmp,
@@ -24,6 +27,7 @@
 	title = {Using OpenMP, Portable Shared Memory Parallel Programming},
 	year = {2007},
 	publisher = {MIT Press},
+	language = {english},
 }
 
 @book{skript:opencl,
@@ -31,5 +35,6 @@
 	publisher = {The Kronos Group},
 	year = {2011},
 	editor = {Munshi, Aaftab},
-	url = {https://www.khronos.org/registry/cl/specs/opencl-1.1.pdf}
+	url = {https://www.khronos.org/registry/cl/specs/opencl-1.1.pdf},
+	language = {english},
 }
