--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -50,15 +50,13 @@
 }
 \usepackage{caption}
 \usepackage{subcaption}
-%\usepackage{cite}
 \usepackage{standalone}
-\usepackage[sorting=none,backend=bibtex]{biblatex}
+\usepackage[backend=bibtex]{biblatex}
 \addbibresource{references.bib}
 \addbibresource{sample/sample.bib}
 \AtEndDocument{\clearpage\ifodd\value{page}\else\null\clearpage\fi}
 \makeindex
 \begin{document}
-%\bibliographystyle{plain}
 \pagestyle{fancy}
 \frontmatter
 \newcommand\HRule{\noindent\rule{\linewidth}{1.5pt}}
@@ -87,6 +85,7 @@ Danilo Bargen,\\
 Marco Bassotti,
 Reto Christen,
 Gregor Dengler,\\
+Felix Hofer,
 Fabian Klein,
 Flavio La Morea,
 Andreas Linggi,\\
