--- a/aufgaben/aufgaben.tex
+++ b/aufgaben/aufgaben.tex
@@ -168,42 +168,43 @@ Daher ben"otigen Sie f"ur die Kurztests einen Computer mit einer
 funktionierenden SSH Implementation.
 
 \section{Aufgabenzuteilung}
-\def\aufnr#1{\raisebox{0pt}[24pt][14pt]{#1}}
+\def\aufnr#1{\raisebox{0pt}[19pt][9pt]{#1}}
 \begin{center}
-\begin{tabular}{|r|l|l|}
+\begin{tabular}{|r|l|l|l|}
 \hline
-Nr&Aufgabe&Team\\
+Nr&Aufgabe&Team&Termin\\
 \hline
-\aufnr{ 1}&Crypto Cracking                &Danilo Bargen, Lukas Murer\\
+\aufnr{ 1}&Crypto Cracking                &Danilo Bargen, Lukas Murer&31.~3.\\
 \hline
-\aufnr{ 2}&CAT Scanner                    &Marco Bassotti, Dario Tr"utsch\\
+\aufnr{ 2}&CAT Scanner                    &Marco Bassotti, Dario Tr"utsch&7.~4.\\
 \hline
-\aufnr{ 3}&Ising Modell                   &\\
+%\aufnr{ 3}&Ising Modell                   &\\
+%\hline
+\aufnr{ 4}&Kugelsternhaufen               &Flavio La Morea, Nicol\'as Rom\'an L"uthold&7.~4.\\
 \hline
-\aufnr{ 4}&Kugelsternhaufen               &Flavio La Morea, Nicol\'as Rom\'an L"uthold\\
+\aufnr{ 5}&Apfelm"annchen in $\mathbb H$  &Tabea M\'endez, Christian Schmid&14.~4.\\
 \hline
-\aufnr{ 5}&quaternionisches Apfelm"annchen&Tabea M\'endez, Christian Schmid\\
+%\aufnr{ 6}&Julia Mengen                   &\\
+%\hline
+\aufnr{ 7}&OpenFOAM                       &Gregor Dengler&28.~4.\\
 \hline
-\aufnr{ 6}&Julia Mengen                   &\\
+\aufnr{ 8}&MapReduce                      &Daniel Monti, Pascal Stump&5.~5.\\
 \hline
-\aufnr{ 7}&OpenFOAM                       &Gregor Dengler\\
+\aufnr{ 9}&Monte Carlo                    &Dorian Amiet, Hannes Badertscher&5.~5.\\
 \hline
-\aufnr{ 8}&MapReduce                      &Daniel Monti, Pascal Stump\\
+\aufnr{10}&SOR und SSOR                   &Felix Hofer&12.~5.\\
 \hline
-\aufnr{ 9}&Monte Carlo                    &Dorian Amiet, Hannes Badertscher\\
+\aufnr{11}&Potentialproblem               &Reto Christen, Philipp Solenthaler&19.~5.\\
 \hline
-\aufnr{10}&SOR und SSOR                   &\\
+\aufnr{12}&W"armeleitung                  &Andreas M"uller&12.~5.\\
 \hline
-\aufnr{11}&Potentialproblem               &Reto Christen, Philipp Solenthaler\\
+\aufnr{13}&Greensche Funktion             &Andreas Linggi, Stefan Steiner&19.~5.\\
 \hline
-\aufnr{12}&W"armeleitung                  &\\
-\hline
-\aufnr{13}&Greensche Funktion             &Andreas Linggi, Stefan Steiner\\
-\hline
-\aufnr{14}&Stosswellen                    &Fabian Klein, Thomas Ziegler\\
+\aufnr{14}&Stosswellen                    &Fabian Klein, Thomas Ziegler&26.~5.\\
 \hline
 \end{tabular}
 \end{center}
+Termine f"ur Kurztests: 31.~3., 14.~4. und 28.~4.
 
 \end{document}
  
