add julia stuff

--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -164,6 +164,7 @@ Hochschule f"ur Technik, Rapperswil, 2014
 \lhead{Anwendungen}
 \def\chapterauthor#1{{\large #1}\bigskip\bigskip}
 \input sample/sample.tex
+\input julia/julia.tex
 \input heat/heat.tex
 \lhead{Index}
 \rhead{}
