add error handling

--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -54,6 +54,7 @@
 \usepackage[backend=bibtex]{biblatex}
 \addbibresource{references.bib}
 \addbibresource{sample/sample.bib}
+\addbibresource{julia/julia.bib}
 \AtEndDocument{\clearpage\ifodd\value{page}\else\null\clearpage\fi}
 \makeindex
 \begin{document}
