--- a/skript/julia/julia.tex
+++ b/skript/julia/julia.tex
@@ -151,7 +151,14 @@ hoch, ein einfacher Zufallszahlgenerator auf der Basis von linearen
 Kongruenzen wie der Lehmer-Generator \cite{julia:lehmer},
 auch bekannt als Park-Miller Generator, reicht v"ollig aus.
 
-
+\begin{figure}
+\begin{center}
+\includegraphics[width=\hsize]{julia/a.png}
+\\
+\includegraphics[width=\hsize]{julia/j-a.png}
+\end{center}
+\caption{Julia-Menge f"ur $c= -0.1+0.1i$}
+\end{figure}
 
 
 \printbibliography[heading=subbibliography]
