--- a/skript/julia/julia.tex
+++ b/skript/julia/julia.tex
@@ -154,12 +154,90 @@ auch bekannt als Park-Miller Generator, reicht v"ollig aus.
 \begin{figure}
 \begin{center}
 \includegraphics[width=\hsize]{julia/a.png}
-\\
+
+\bigskip
+
 \includegraphics[width=\hsize]{julia/j-a.png}
 \end{center}
 \caption{Julia-Menge f"ur $c= -0.1+0.1i$}
 \end{figure}
 
+\begin{figure}
+\begin{center}
+\includegraphics[width=\hsize]{julia/b.png}
+
+\bigskip
+
+\includegraphics[width=\hsize]{julia/j-b.png}
+\end{center}
+\caption{Julia-Menge f"ur $c= -0.5+0.5i$}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\hsize]{julia/c.png}
+
+\bigskip
+
+\includegraphics[width=\hsize]{julia/j-c.png}
+\end{center}
+\caption{Julia-Menge f"ur $c= -1+0.05i$}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\hsize]{julia/d.png}
+
+\bigskip
+
+\includegraphics[width=\hsize]{julia/j-d.png}
+\end{center}
+\caption{Julia-Menge f"ur $c= -0.1+0.75i$}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\hsize]{julia/e.png}
+
+\bigskip
+
+\includegraphics[width=\hsize]{julia/j-e.png}
+\end{center}
+\caption{Julia-Menge f"ur $c= 0.25+0.52i$}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\hsize]{julia/f.png}
+
+\bigskip
+
+\includegraphics[width=\hsize]{julia/j-f.png}
+\end{center}
+\caption{Julia-Menge f"ur $c= -0.5+0.55i$}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\hsize]{julia/g.png}
+
+\bigskip
+
+\includegraphics[width=\hsize]{julia/j-g.png}
+\end{center}
+\caption{Julia-Menge f"ur $c= 0.66i$}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=\hsize]{julia/h.png}
+
+\bigskip
+
+\includegraphics[width=\hsize]{julia/j-h.png}
+\end{center}
+\caption{Julia-Menge f"ur $c= -i$}
+\end{figure}
 
 \printbibliography[heading=subbibliography]
 \end{refsection}
