--- a/skript/algorithm.tex
+++ b/skript/algorithm.tex
@@ -1572,9 +1572,9 @@ A&=\begin{pmatrix}
 &
 b&=\begin{pmatrix}1\\1\\1\\\vdots\\1\end{pmatrix},
 &
-x_1&=\begin{pmatrix}1\\0\\0\\\vdots\\0\end{pmatrix}.
+x_1&=\begin{pmatrix}1\\0\\0\\\vdots\\0\end{pmatrix},
 \end{align*}
-Mit dem CG-Verfahren, und bestimme die Konvergenzgeschwindigkeit.
+mit dem CG-Verfahren, und bestimme die Konvergenzgeschwindigkeit.
 
 \begin{figure}
 \begin{center}
